--- a/new.html
+++ b/new.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/new.css">
 </head>
 
 <body>
-    
+    <h1>这是一个大标题</h1>
 </body>
 
 </html>
